--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<style>
-body {
-  background-image: url('mattcott.gif');
-  background-repeat: no-repeat;
-  background-attachment: fixed;  
-  background-size: cover;
-}
-</style>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#373D3F">
+    <meta name="robots" content="index,follow"><!-- All Search Engines -->
+    <meta name="googlebot" content="index,follow"><!-- Google Specific -->
+    <link rel="canonical" href="https://mattcott.com/index-amp.html">
+    <Title>Matt Cotton - IT Systems Engineer</Title>
+    <meta name="description" content="IT Systems Engineer, Matt Cotton" />
+    <meta name="subject" content="IT Systems Engineer, Matt Cotton">
+    <meta name="theme-color" content="#373D3F"/>
+    <meta name="msapplication-navbutton-color" content="#373D3F"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="#373D3F"/>
+    <link rel="icon" href="favicon.ico" sizes="32x32" type="image/ico">
+    <script src="https://instant.page/3.0.0" type="module" defer integrity="sha384-OeDn4XE77tdHo8pGtE1apMPmAipjoxUQ++eeJa6EtJCfHlvijigWiJpD7VDPWXV1"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript">
+        function pageLoaded() 
+        {
+            document.querySelector("div.social").style.opacity = 1; 
+        } 
+        window.onload = pageLoaded;
+    </script>
+</head> 
+<body data-instant-intensity="viewport-all">
+ <div class="container">
+    <div class="title">
+        <h1>Matt Cotton</h1>
+     </div>
+     <div class="blurb">
+        <p>IT Systems Engineer</p>
+     </div>    
+     <div class="blurb">
+        <p>United Kingdom (Bath/London)</p>
+     </div>
+     <div class="social">
+        <a href="https://www.linkedin.com/in/mattcott" target="_blank"><i class="fab fa-linkedin"></i></a> 
+        <a href="mailto:hello@mattcott.com"><i class="fas fa-envelope-square"></i></a> 
+        <a href="https://github.com/mattcottuk" target="_blank"><i class="fab fa-github-square"></i></a> 
+    </div>      
+ </div>
 </body>
 </html>
